* Change FLV player to FlowPlayer
* Move Refresh menu button to a Tools menu item
* Add links to online manual, tips and tricks, and release notes to Help menu
* Add Wikiversity
* Add "Clear Recent Projects" menu item
* Add check for existing eXe server when starting new one
* Allow translations for some Javascript message strings
* Disable nevow timeout exceptions that could be triggered by Firefox dialogs
* Update to TinyMCE 2.1.0

Version 0.22 (r2674)
* Add File... Print to print an entire course (same as export singlepage)
* Add attachment icon in preview mode
* Add Slate style
* Add help tips for multi-select iDevice
* Don't add unneeded large files to SCORM exports
* Fix maintaining language preference across starts
* Fix Merge Import and Extract
* Fix maths iDevice input file descriptor on Windows
* Fix uploads of non-ASCII filenames
* Fix line endings in text exports
* Fix file copying in applet iDevice
* Fix &raquo; in web export
* Changing to another node does not mark package as needing saving
* Updated translations
* Updated build scripts for Windows and OS X

Version 0.21
* Enabled rich text editor context menu cut/copy/paste
* Add import/export features for iDevice editor
* Update parsing of Wikipedia articles
* Improve text export
* Optimize internal resource handling
* Windows: removed console window
* Updated translations
* Include SCORM Quiz iDevice in Windows ready2run version
* fix FLV player dimensions
* fix web export CSS for MSIE

Version 0.20.2
* Improved Japanese translation
* Add Live Chat to Help menu to open link that connects to IRC CGI
* Fix to allow use of iDevices created in 0.19
* OS X: Add SCORM 1.2 export schema

Version 0.20.1 - Arachnidian Avondale (bug-less)
* Improved ability to upgrade projects made with version 0.19 and earlier
* Updated Japanese and Chinese translations
* Removed access to SCORM2004 export
* Fix translation ability of math field
* Disable Firefox update check

Version 0.20 - Arachnidian Avondale