@@ -167,7 +167,7 @@ Netscape Communications Corporation.
 Portions created by the Initial Developer are Copyright (C) 1998
 the Initial Developer. All Rights Reserved.
 
-    * John Forkosh Associates, Inc. for mimeTeX 
+ * John Forkosh Associates, Inc. for mimeTeX 
 
 mimeTeX is distributed under the terms of the GNU General Public License.
 http://www.gnu.org/licenses/gpl.html
@@ -188,6 +188,7 @@ and other provisions required by the GPL or the LGPL. If you do not delete
 the provisions above, a recipient may use your version of this file under
 the terms of any one of the NPL, the GPL or the LGPL.
 
+ * iPod is a trademark of Apple Inc.
 
  * Wingware generously donated licenses for the Wing Python IDE to developers working on eXe.
 
